# esame0207

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DiarioAttivita  DiarioAttivita.cpp  DiarioAttivita.hpp  Makefile  README.md  attivita.txt  cmake_install.cmake  diario  main.cpp  test_DiarioAttivita.cpp  test_diario[1]_include.cmake
